[package]
name = "racrc"
version = "0.1.0"
authors = ["Kjetil Kjeka <kjetilkjeka@gmail.com>"]
edition = "2018"

[dependencies]
clap = {version = "2.32", features = ["yaml"]}

inflections = "1.1"

racr = {git = "https://github.com/racr-rust/racr-rust.git", rev = "1f8df4bb8685e874bdfbd661c18badd20804b3e7"}
racr-parser = {git = "https://github.com/racr-rust/racr-parser.git", rev = "4c4ee0614c47dbacadcc7c8546595c52e6881c63"}
