[package]
name = "racrc"
version = "0.1.0"
authors = ["Kjetil Kjeka <kjetilkjeka@gmail.com>"]
edition = "2018"

[dependencies]
clap = {version = "2.32", features = ["yaml"]}

inflections = "1.1"

racr = {git = "https://github.com/racr-rust/racr-rust.git", rev = "d75a7f130a2c64e0971d4a4ccdcb236d75a638a8"}
racr-parser = {git = "https://github.com/racr-rust/racr-parser.git", rev = "02cd49a2d4f74dc68829a7b36df04768fc372a45"}
